tests/invalid/type/arity_textfile_tell_too_many.pts
import Io;

function main() : void {
    var f = Io.openText("io_text.txt", "r");
    f.tell(1);
}
